# gdsz

./: .gitignore  README.md  version.inf
Resources/: AchievementsGDSZ.plist  LevelData.plist  levelCustomizer.json
gdszmod/: CMakeLists.txt  CMakeSettings.json  README.md
gdszmod/src/: DiscordRpc.cpp  DiscordRpc.h  PromoInterstitial.cpp  PromoInterstitial.hpp  TOSPopup.cpp  TOSPopup.hpp  dllmain.cpp  mapped-hooks.hpp  termsOfUseLayer.cpp  termsOfUseLayer.hpp  utils.cpp
